--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <h3>英语</h3>
         <ul>
             <li><a href="eng/engword_video.zip">英语中考单词教学视频+初中单词视频(zip,875.47MB)</a></li>
-            <li><a href="eng/eng_wordlists_g6.zip">沪教版英语六年级单词表(zip,24.21KB)</a></li>
+            <li><a href="eng/eng_wordlists_g6.zip">单词表(zip,0.86MB)</a></li>
             <li><a href="eng/eng_wordlists_jh.zip">英语中考常考短语和大纲词汇(zip,133.85KB)</a></li>
         </ul>
         <h3>数学</h3>
         <ul>
             <li><a href="24Point.html">24点题目生成器</a></li>
-            <li><a href="mths/timu/陈子悦大大解题思路示例.mp4">陈子悦大大数学解题思路示例(mp4,1.54MB)</a></li>
+            <li><a href="mths/timu/解题思路示例.mp4">数学解题思路示例(mp4,1.54MB)</a></li>
         </ul>
     <h2>课外</h2>
         <h3>日语</h3>
